--- a/JenkinsFile
+++ b/JenkinsFile
@@ -78,7 +78,56 @@ pipeline {
         }
     
 
-        stage('Deploy Staging') {
+        // stage('Deploy Staging') {
+        //     agent {
+        //         docker {
+        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+        //             reuseNode true
+        //         }
+        //     }
+
+        //      steps {
+        //         sh '''
+        //             npm install netlify-cli@20.1.1 node-jq
+        //             node_modules/.bin/netlify --version
+        //             echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
+        //             node_modules/.bin/netlify status
+        //             node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
+        //             node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
+        //         '''
+
+        //         script{
+        //             env.staging_url=sh(script:"node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json", returnStdout:true)
+        //         }
+        //     }
+        // }
+
+        //  stage('Staging E2E') {
+        //     agent {
+        //         docker {
+        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+        //             reuseNode true
+        //         }
+        //     }
+
+        //     environment {
+        //         CI_ENVIRONMENT_URL = "${env.staging_url}"
+        //     }
+
+        //     steps {
+        //         sh '''
+        //             npx playwright test  --reporter=html
+        //         '''
+        //     }
+
+        //     post {
+        //         always {
+        //             publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
+        //         }
+        //     }
+        // }
+
+        stage(' Deploy Staging') {
             agent {
                 docker {
                     image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
@@ -86,37 +135,21 @@ pipeline {
                 }
             }
 
-             steps {
+        //     environment {
+        //         CI_ENVIRONMENT_URL = "${env.staging_url}"
+        //     }
+
+            steps {
                 sh '''
+                    node --version
                     npm install netlify-cli@20.1.1 node-jq
                     node_modules/.bin/netlify --version
                     echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
                     node_modules/.bin/netlify status
                     node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
                     node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
-                '''
-
-                script{
-                    env.staging_url=sh(script:"node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json", returnStdout:true)
-                }
-            }
-        }
-
-         stage('Staging E2E') {
-            agent {
-                docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                    reuseNode true
-                }
-            }
-
-            environment {
-                CI_ENVIRONMENT_URL = "${env.staging_url}"
-            }
-
-            steps {
-                sh '''
                     npx playwright test  --reporter=html
+                    CI_ENVIRONMENT_URL = "node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json"
                 '''
             }
 
