--- a/JenkinsFile
+++ b/JenkinsFile
@@ -127,38 +127,37 @@ pipeline {
         //     }
         // }
 
-        // stage(' Deploy Staging') {
-        //     agent {
-        //         docker {
-        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-        //             reuseNode true
-        //         }
-        //     }
+        stage(' Deploy Staging') {
+            agent {
+                docker {
+                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    reuseNode true
+                }
+            }
 
-        //     environment {
-        //         CI_ENVIRONMENT_URL = 'staging_url has to be set'
-        //     }
+            environment {
+                CI_ENVIRONMENT_URL = 'staging_url has to be set'
+            }
 
-        //     steps {
-        //         sh '''
-        //             node --version
-        //             npm install netlify-cli@20.1.1 node-jq
-        //             node_modules/.bin/netlify --version
-        //             echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
-        //             node_modules/.bin/netlify status
-        //             node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
-        //             node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
-        //             CI_ENVIRONMENT_URL = $(node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json)
-        //             npx playwright test  --reporter=html
-        //         '''
-        //     }
+            steps {
+                sh '''
+                    npm install netlify-cli@20.1.1 node-jq
+                    node_modules/.bin/netlify --version
+                    echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
+                    node_modules/.bin/netlify status
+                    node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
+                    node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
+                    CI_ENVIRONMENT_URL=$(node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json)
+                    npx playwright test  --reporter=html
+                '''
+            }
 
-        //     post {
-        //         always {
-        //             publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
-        //         }
-        //     }
-        // }
+            post {
+                always {
+                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
+                }
+            }
+        }
 
         stage('Approval')
         {
