--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,6 +4,7 @@ pipeline {
     environment {
         NETLIFY_SITE_ID = 'dd4e9d15-e74e-4c5e-a45a-da5f9a024f29'
         NETLIFY_AUTH_TOKEN = credentials('netlify-token')
+        REACT_APP_VERSION = '1.2.3'
     }
 
     stages {
@@ -159,14 +160,14 @@ pipeline {
             }
         }
 
-        stage('Approval')
-        {
-            steps{
-                timeout(time: 15, unit: 'MINUTES') {
-                    input message: 'Do you wish to deploy to production?', ok: 'Yes, I am sure!'
-                }
-            }
-        }
+        // stage('Approval')
+        // {
+        //     steps{
+        //         timeout(time: 15, unit: 'MINUTES') {
+        //             input message: 'Do you wish to deploy to production?', ok: 'Yes, I am sure!'
+        //         }
+        //     }
+        // }
 
     //     stage('Deploy prod') {
     //         agent {
