--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,16 +1,14 @@
 pipeline {
-    agent any
+    agent any{
+        stages {
 
-    environment {
-        NETLIFY_SITE_ID = 'dd4e9d15-e74e-4c5e-a45a-da5f9a024f29'
-        NETLIFY_AUTH_TOKEN = credentials('netlify-token')
-        // REACT_APP_VERSION = '1.2.3'
-        REACT_APP_VERSION = "1.0.$BUILD_ID"
-    }
+        stage('Hello') {
+            steps {
+               echo("Hello world!....")
+            }
+        }
 
-    stages {
-
-        stage('Build') {
+         stage('Build') {
             agent {
                 docker {
                     image 'node:18-alpine'
@@ -27,193 +25,25 @@ pipeline {
                     ls -la
                 '''
             }
-        }
+         }
 
-        stage('Tests') {
-            parallel {
-                stage('Unit tests') {
-                    agent {
-                        docker {
-                            image 'node:18-alpine'
-                            reuseNode true
-                        }
-                    }
-
-                    steps {
-                        sh '''
-                            #test -f build/index.html
-                            npm test
-                        '''
-                    }
-                    post {
-                        always {
-                            junit 'jest-results/junit.xml'
-                        }
-                    }
-                }
-            }
-        }
-        
-        stage('E2E') {
+        stage('Test stage') {
             agent {
                 docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
+                    image 'node:18-alpine'
                     reuseNode true
                 }
+            
             }
-
             steps {
                 sh '''
-                    npm install serve
-                    node_modules/.bin/serve -s build &
-                    sleep 10
-                    npx playwright test  --reporter=html
+                    test -f build/index.html
+                    npm test
                 '''
-            }
-
-            post {
-                always {
-                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright Local', reportTitles: '', useWrapperFileDirectly: true])
-                   
-                }
-            }
-        }
-    
-
-        // stage('Deploy Staging') {
-        //     agent {
-        //         docker {
-        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-        //             reuseNode true
-        //         }
-        //     }
-
-        //      steps {
-        //         sh '''
-        //             npm install netlify-cli@20.1.1 node-jq
-        //             node_modules/.bin/netlify --version
-        //             echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
-        //             node_modules/.bin/netlify status
-        //             node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
-        //             node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
-        //         '''
-
-        //         script{
-        //             env.staging_url=sh(script:"node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json", returnStdout:true)
-        //         }
-        //     }
-        // }
-
-        //  stage('Staging E2E') {
-        //     agent {
-        //         docker {
-        //             image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-        //             reuseNode true
-        //         }
-        //     }
-
-        //     environment {
-        //         CI_ENVIRONMENT_URL = "${env.staging_url}"
-        //     }
-
-        //     steps {
-        //         sh '''
-        //             npx playwright test  --reporter=html
-        //         '''
-        //     }
-
-        //     post {
-        //         always {
-        //             publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
-        //         }
-        //     }
-        // }
-
-        stage(' Deploy Staging') {
-            agent {
-                docker {
-                    image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-                    reuseNode true
-                }
-            }
-
-            environment {
-                CI_ENVIRONMENT_URL = 'staging_url has to be set'
-            }
-
-            steps {
-                sh '''
-                    npm install netlify-cli@20.1.1 node-jq
-                    node_modules/.bin/netlify --version
-                    echo "Deploying to staging. Site ID: $NETLIFY_SITE_ID"
-                    node_modules/.bin/netlify status
-                    node_modules/.bin/netlify deploy --dir=build --json > deploy-output.json
-                    node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json
-                    CI_ENVIRONMENT_URL=$(node_modules/.bin/node-jq -r '.deploy_url' deploy-output.json)
-                    npx playwright test  --reporter=html
-                '''
-            }
-
-            post {
-                always {
-                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Staging E2E', reportTitles: '', useWrapperFileDirectly: true])
-                }
             }
         }
 
-        // stage('Approval')
-        // {
-        //     steps{
-        //         timeout(time: 15, unit: 'MINUTES') {
-        //             input message: 'Do you wish to deploy to production?', ok: 'Yes, I am sure!'
-        //         }
-        //     }
-        // }
-
-    //     stage('Deploy prod') {
-    //         agent {
-    //             docker {
-    //                 image 'node:18-alpine'
-    //                 reuseNode true
-    //             }
-    //         }
-    //         steps {
-    //             sh '''
-    //                 npm install netlify-cli@20.1.1
-    //                 node_modules/.bin/netlify --version
-    //                 echo "Deploying to production. Site ID: $NETLIFY_SITE_ID"
-    //                 node_modules/.bin/netlify status
-    //                 node_modules/.bin/netlify deploy --dir=build --prod
-    //             '''
-    //         }
-    //     }
-
-    //     stage('Prod E2E') {
-    //         agent {
-    //             docker {
-    //                 image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
-    //                 reuseNode true
-    //             }
-    //         }
-
-    //         environment {
-    //             CI_ENVIRONMENT_URL = 'https://fanciful-empanada-c7edc2.netlify.app/'
-    //         }
-
-    //         steps {
-    //             sh '''
-    //                 npx playwright test  --reporter=html
-    //             '''
-    //         }
-
-    //         post {
-    //             always {
-    //                 publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright E2E', reportTitles: '', useWrapperFileDirectly: true])
-    //             }
-    //         }
-    // }
-
-     stage('Deploy Prod') {
+           stage('Deploy Prod') {
             agent {
                 docker {
                     image 'mcr.microsoft.com/playwright:v1.39.0-jammy'
@@ -242,7 +72,7 @@ pipeline {
                     publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: false, reportDir: 'playwright-report', reportFiles: 'index.html', reportName: 'Playwright E2E', reportTitles: '', useWrapperFileDirectly: true])
                 }
             }
+        }
     }
 }
 }
-
