--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,5 +1,5 @@
 pipeline {
-    agent any {
+    agent any
         stages {
 
         stage('Hello') {
@@ -74,5 +74,4 @@ pipeline {
             }
         }
     }
-}
 }
