--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,5 +7,27 @@ pipeline {
                 echo 'Hello World'
             }
         }
+
+        stage('Build')
+        {
+            agent{
+                docker{
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
+            }
+
+            steps{
+                sh '''
+                    ls -la
+                    node --version
+                    npm --version
+                    npm ci
+                    npm run build
+                    ls -la
+                '''
+            }
+        }
+
     }
 }
