--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,26 +8,26 @@ pipeline {
             }
         }
 
-        stage('Build')
-        {
-            agent{
-                docker{
-                    image 'node:18-alpine'
-                    reuseNode true
-                }
-            }
+        // stage('Build')
+        // {
+        //     agent{
+        //         docker{
+        //             image 'node:18-alpine'
+        //             reuseNode true
+        //         }
+        //     }
 
-            steps{
-                sh '''
-                    ls -la
-                    node --version
-                    npm --version
-                    npm ci
-                    npm run build
-                    ls -la
-                '''
-            }
-        }
+        //     steps{
+        //         sh '''
+        //             ls -la
+        //             node --version
+        //             npm --version
+        //             npm ci
+        //             npm run build
+        //             ls -la
+        //         '''
+        //     }
+        // }
 
          stage('Test')
         {
@@ -59,7 +59,7 @@ pipeline {
             steps{
                 sh '''
                    npm install netlify-cli -g
-                   netlify --version
+                   node_modules/.bin/netlify --version
                 '''
             }
         }
